tests/ui/unsafe/issue-45107-unnecessary-unsafe-in-closure.thir.stderr
error: unnecessary `unsafe` block
  --> $DIR/issue-45107-unnecessary-unsafe-in-closure.rs:10:13
   |
LL |     unsafe {
   |     ------ because it's nested under this `unsafe` block
LL |         let f = |v: &mut Vec<_>| {
LL |             unsafe {
   |             ^^^^^^ unnecessary `unsafe` block
   |
note: the lint level is defined here
  --> $DIR/issue-45107-unnecessary-unsafe-in-closure.rs:4:8
   |
LL | #[deny(unused_unsafe)]
   |        ^^^^^^^^^^^^^

error: unnecessary `unsafe` block
  --> $DIR/issue-45107-unnecessary-unsafe-in-closure.rs:12:38
   |
LL |     unsafe {
   |     ------ because it's nested under this `unsafe` block
...
LL |                 |w: &mut Vec<u32>| { unsafe {
   |                                      ^^^^^^ unnecessary `unsafe` block

error: unnecessary `unsafe` block
  --> $DIR/issue-45107-unnecessary-unsafe-in-closure.rs:16:34
   |
LL |     unsafe {
   |     ------ because it's nested under this `unsafe` block
...
LL |             |x: &mut Vec<u32>| { unsafe {
   |                                  ^^^^^^ unnecessary `unsafe` block

error: aborting due to 3 previous errors

